2048-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "2048-ingress"
  namespace: "2048-game"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: service-group
  labels:
    app: 2048-ingress
spec:
  rules:
    - host: dev.mycozzycoffee.site
      http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: service-frontend
                  port:
                    number: 80
